tests-integration/tests/roundtrip/invalid/semantic_errors/typecheck/int_as_constraint/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic_errors/typecheck/int_as_constraint/int_as_constraint.essence:3:11:
  |
3 | such that x
  |           ^
Type error: Integer variable 'x' cannot be used in boolean context

tests/roundtrip/invalid/semantic_errors/typecheck/int_as_constraint/int_as_constraint.essence:4:11:
  |
4 | such that y
  |           ^
Type error: Integer variable 'y' cannot be used in boolean context